[tool.poetry]
name = "acm-session"
version = "0.1.0"
description = ""
authors = ["kamal-shrestha <kamalandshrestha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^3.2.1"
numpy = "^1.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
